src/objects/Apttus_Billing__GatewayCommunication__c.object
<CustomObject>
    <description>Represents request and responses during a communication with a 3rd party Gateway.</description>
    <fields>
        <fullName>Apttus_Billing__CommunicationDate__c</fullName>
        <description>Date/Time when the communication sent/received to/from the Gateway.</description>
        <inlineHelpText>Date/Time when the communication sent/received to/from the Gateway.</inlineHelpText>
        <label>Communication Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__GatewayTransactiontId__c</fullName>
        <description>The associated gateway transaction id.</description>
        <inlineHelpText>The associated gateway transaction id.</inlineHelpText>
        <label>Gateway Transaction Id</label>
        <referenceTo>Apttus_Billing__GatewayTransaction__c</referenceTo>
        <relationshipLabel>Gateway Communications</relationshipLabel>
        <relationshipName>GatewayCommunications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PayloadType__c</fullName>
        <description>The type of payload sent/received to/from the Gateway.</description>
        <inlineHelpText>The type of payload sent/received to/from the Gateway.</inlineHelpText>
        <label>Payload Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Payload__c</fullName>
        <description>The entire payload sent/received to/from the Gateway.</description>
        <inlineHelpText>The entire payload sent/received to/from the Gateway.</inlineHelpText>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Status__c</fullName>
        <description>Status of the communication with the gateway.</description>
        <inlineHelpText>Status of the communication with the gateway.</inlineHelpText>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Type__c</fullName>
        <description>Request/Response type. Ex: Authorize, Capture, Sale etc</description>
        <inlineHelpText>Request/Response type. Ex: Authorize, Capture, Sale etc</inlineHelpText>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Gateway Communication</label>
    <nameField>
        <displayFormat>GWC-{0000000000}</displayFormat>
        <label>Gateway Communication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>